--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,17 @@ html, body {
   padding: 10px;
   border-radius: 5px;
   color: rgba(96, 174, 207, 1);
+  cursor: pointer;
+}
+
+.profile_button_mobile {
+  background: none;
+  font-size: 20px;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  color: rgba(96, 174, 207, 1);
+  cursor: pointer;
 }
 
 
@@ -142,6 +153,26 @@ html, body {
 
 .profile_actions.Active {
   display: flex;
+  animation: appear 0.5s ease-in;
+}
+
+.profile_actions_mobile.Active {
+  display: flex;
+  animation: appear 0.5s ease-in;
+}
+
+.profile_actions_mobile {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  display: none;
+  flex-direction: column;
+  align-items: flex-start;
+  background: #fff;
+  padding: 10px;
+  border: 1px solid gainsboro;
+  z-index: 999;
+  gap: 2px;
 }
 
 .profile_actions {
