--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,7 @@
 @media screen and (max-width: 950px) {
+    .profile_box_menu {
+        display: flex;
+    }
     .profile_box {
         display: none;
     }
