--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,11 @@
+@media screen and (max-width: 1000px) {
+    .auto-chemical_title {
+        font-size: 18px;
+    }
+    .navigation_box_col {
+        width: 50%;
+    }
+}
 @media screen and (max-width: 950px) {
     .profile_box_menu {
         display: flex;
@@ -51,6 +59,68 @@
     .navigation_box {
         flex-direction: column;
     }
+    .auto-chemical_title {
+        font-size: 14px;
+    }
+    .auto-clear-care_button-route {
+        width: 30px;
+        height: 30px;
+    }
+    .auto-clear-care_inner {
+        border-radius: 25.34px 0px 46.34px 0px;
+    }
+}
+
+@media screen and (max-width: 860px) {
+    .nav-routes_col {
+        width: 100%;
+    }
+    .news-letter_col {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .box_household_chemical_title {
+        font-size: 22px;
+    }
+    .pro-for-living_box_title {
+        font-size: 22px;
+    }
+    .discount_box {
+        width: 60%;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .cat-col {
+        width: 100%;
+    }
+    .chemic-col {
+        width: 100%;
+    }
+    .box_household_chemical {
+        padding: 40px 15px 40px 70px;
+    }
+    .catalogs-col {
+        width: 100%;
+    }
+    .pro-for-living_col {
+        width: 100%;
+    }
+    .pro-for-living_box {
+        padding: 40px 15px 40px 70px;
+        background-position: bottom;
+    }
+    .about-us_img_col {
+        width: 100%;
+    }
+    .about-us_info_col {
+        width: 100%;
+    }
+    .footer_section {
+        padding: 30px 0;
+    }
 }
 
 @media screen and (max-width: 600px) {
@@ -82,6 +152,31 @@
     .catalog_button {
         font-size: 20px;
     }
+    .box_catalog_button {
+        width: 50px;
+        height: 50px;
+        font-size: 17px;
+    }
+    .box_catalog_title {
+        font-size: 37px;
+    }
+    .box_household_chemical {
+        padding: 40px 15px 40px 70px;
+    }
+    .discount_box {
+        width: 100%;
+        padding: 40px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .auto-clear-care_col {
+        width: 50%;
+    }
+    .news-letter_inner {
+        flex-direction: column;
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 450px) {
@@ -93,5 +188,11 @@
     }
     .button-category-select {
         font-size: 12px;
+    }
+    .box_household_chemical_title {
+        font-size: 28px;
+    }
+    .box_catalog_title {
+        font-size: 32px;
     }
 }
