--- a/css/main.css
+++ b/css/main.css
@@ -678,7 +678,7 @@
     align-items: flex-start;
     gap: 20px;
     height: 100%;
-    background-image: url("/assets/image/6.jpg");
+    background-image: url("../assets/image/6.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     padding: 40px 15px 0 60px;
@@ -790,7 +790,7 @@
 
 .discount_section {
     margin-top: 80px;
-    background-image: url("/assets/image/7.jpg");
+    background-image: url("../assets/image/7.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 }
