--- a/css/media.css
+++ b/css/media.css
@@ -1,9 +1,15 @@
+@media screen and (max-width: 1300px) {
+    .nextSlideButton {
+        right: 0 !important;
+    }
+    .previousSlideButton {
+        left: 0 !important;
+    }
+}
+
 @media screen and (max-width: 1000px) {
     .auto-chemical_title {
         font-size: 18px;
-    }
-    .navigation_box_col {
-        width: 50%;
     }
 }
 @media screen and (max-width: 950px) {
@@ -41,6 +47,7 @@
         border: 1px solid gainsboro;
     }
     .header_logo {
+        margin: 0;
         max-width: 150px;
     }
     .header_box_logo_inner {
@@ -66,8 +73,10 @@
         width: 30px;
         height: 30px;
     }
-    .auto-clear-care_inner {
-        border-radius: 25.34px 0px 46.34px 0px;
+    .catalog_popup_box {
+        position: relative;
+        top: 0;
+        left: 0;
     }
 }
 
@@ -89,6 +98,12 @@
     }
     .discount_box {
         width: 60%;
+    }
+    .route_link {
+        font-size: 14px;
+    }
+    .main_route_link {
+        font-size: 14px;
     }
 }
 
@@ -120,6 +135,9 @@
     }
     .footer_section {
         padding: 30px 0;
+    }
+    .about-us_img_col {
+        padding: 0 !important;
     }
 }
 
@@ -167,6 +185,9 @@
         width: 100%;
         padding: 40px;
     }
+    .navigation_box_col {
+        width: 50%;
+    }
 }
 
 @media screen and (max-width: 500px) {
@@ -201,6 +222,18 @@
     }
     .news-letter_title {
         font-size: 14px;
+    }
+    .discount_descr {
+        font-size: 18px;
+    }
+    .catalog-button {
+        font-size: 17px;
+    }
+    .discount_title {
+        font-size: 24px;
+    }
+    .discount_value {
+        font-size: 45px;
     }
 }
 
