--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-    min-width: 320px !important;
+    min-width: 320px;
 }
 
 * {
@@ -199,6 +199,7 @@ body {
     border: none;
     background: none;
     font-size: 25px;
+    color: #000;
 }
 
 .navigation_wrapper {
