--- a/css/main.css
+++ b/css/main.css
@@ -329,18 +329,19 @@ body {
 .intro_section {
     position: relative;
     overflow: hidden;
-    padding: 50px 0 250px;
-    background-image: url("../assets/image/1.jpg");
-    background-repeat: no-repeat;
+    padding: 40px 0 250px;
+    background-image: url("../assets/image/1.png");
     background-size: cover;
+    background-repeat: no-repeat;
+    transition: 0.2s ease-in;
 }
+
 
 .figure {
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
-    object-fit: cover;
 }
 
 .intro_container {
@@ -634,6 +635,8 @@ body {
 }
 
 .box_catalog {
+    position: relative;
+    overflow: hidden;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
@@ -645,6 +648,34 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     border-radius: 55px;
+}
+
+.box_catalog:hover .absolute_box {
+    opacity: 1;
+    transition: 0.2s ease-in;
+}
+
+.absolute_box {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.2);
+    transition: 0.5s ease-in;
+    border-radius: 48px 0 0 48px;
+    z-index: 4;
+}
+
+.absolute_link {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
 }
 
 .box_catalog_title {
@@ -672,6 +703,8 @@ body {
 }
 
 .box_household_chemical {
+    position: relative;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -682,6 +715,11 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     padding: 40px 15px 0 70px;
+}
+
+.box_household_chemical:hover .absolute_box {
+    opacity: 1;
+    transition: 0.2s ease-in;
 }
 
 .box_household_chemical_title {
@@ -743,9 +781,15 @@ body {
 
 .auto-clear-care_box {
     position: relative;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     height: 100%;
+}
+
+.auto-clear-care_box:hover .absolute_box {
+    opacity: 1;
+    transition: 0.2s ease-in;
 }
 
 .auto-chemical_title {
@@ -763,7 +807,7 @@ body {
     display: flex;
     justify-content: center;
     background: #A1C8D0;
-    z-index: 999;
+    z-index: 4;
     border-radius: 44.34px 0px 44.34px 0px;
     padding: 15px;
 }
@@ -786,7 +830,7 @@ body {
 
 .wheel_element {
     position: absolute;
-    bottom: 5px;
+    bottom: 0;
     right: 0;
     width: 82%;
     height: 60%;
@@ -794,7 +838,7 @@ body {
 
 .auto_chemical_img {
     width: 100%;
-    height: auto;
+    height: 100%;
     border-radius: 44.34px 0px 0 44.34px;
 }
 
@@ -806,6 +850,7 @@ body {
     background: #fff;
     padding: 12px 0 0 12px;
     border-radius: 38px 0 0 0;
+    z-index: 4;
 }
 
 .auto-clear-care_button-route {
@@ -820,6 +865,8 @@ body {
 }
 
 .pro-for-living_box {
+    position: relative;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -830,6 +877,11 @@ body {
     background-repeat: no-repeat;
     padding: 40px 15px 0 60px;
     border-radius: 55px
+}
+
+.pro-for-living_box:hover .absolute_box {
+    opacity: 1;
+    transition: 0.2s ease-in;
 }
 
 .pro-for-living_box_title {
