--- a/css/media.css
+++ b/css/media.css
@@ -67,7 +67,8 @@
         flex-direction: column;
     }
     .auto-chemical_title {
-        font-size: 14px;
+        font-size: 12px;
+        padding: 0;
     }
     .auto-clear-care_route {
         border-radius: 28px 0 0 0;
@@ -132,6 +133,7 @@
         padding: 40px 15px 40px 70px;
     }
     .catalogs-col {
+        order: 2;
         flex-basis: 100%;
         transition: 0.5s ease-in;
     }
