--- a/css/media.css
+++ b/css/media.css
@@ -133,10 +133,10 @@
         padding: 40px 15px 40px 70px;
     }
     .catalogs-col {
-        order: 2;
         flex-basis: 100%;
         transition: 0.5s ease-in;
     }
+    .auto-clea
     .pro-for-living_col {
         flex-basis: 100%;
     }
@@ -226,6 +226,10 @@
     .auto-clear-care_col {
         flex-basis: 50%;
         transition: 0.5s ease-in;
+    }
+    .auto-clear-carr_col:nth-child(3) {
+        flex-basis: 100%;
+        transition: 0.5s ease-in
     }
     .news-letter_inner {
         flex-direction: column;
