--- a/css/media.css
+++ b/css/media.css
@@ -136,7 +136,6 @@
         flex-basis: 100%;
         transition: 0.5s ease-in;
     }
-    .auto-clea
     .pro-for-living_col {
         flex-basis: 100%;
     }
@@ -227,7 +226,7 @@
         flex-basis: 50%;
         transition: 0.5s ease-in;
     }
-    .auto-clear-carr_col:nth-child(3) {
+    .auto-clear-care_col:nth-child(3) {
         flex-basis: 100%;
         transition: 0.5s ease-in
     }
