--- a/css/main.css
+++ b/css/main.css
@@ -462,15 +462,15 @@ body {
 }
 
 .button-category-active {
-    padding: 6px 12px;
     border: 2px solid rgba(116, 169, 193, 1) !important;
     color: rgba(116, 169, 193, 1) !important;
-    transition: 0.3s ease-in;
+    transition: 0.2s ease-in;
     pointer-events: none;
 }
 
 .button-category-none {
-    border: none;
+    border: 2px solid rgba(0, 0, 0, 0);
+    padding: 6px 12px;
     border-radius: 99em;
     font-family: 'Inter', sans-serif;
     font-weight: 500;
@@ -478,7 +478,7 @@ body {
     color: rgba(165, 165, 165, 1);
     background: none;
     cursor: pointer;
-    transition: 0.3s ease-in;
+    transition: 0.2s ease-in;
 }
 
 .cards_slider_box {
