--- a/css/media.css
+++ b/css/media.css
@@ -114,7 +114,6 @@
         max-height: 0;
         overflow: hidden;
         transition: max-height 1s linear;
-        border-radius: 0;
     }
     .popup_box_main-routes {
         border-radius: 0;
@@ -238,7 +237,7 @@
 
 @media screen and (max-width: 700px) {
     .tabs_slider_inner {
-        gap: 20px;
+        gap: 5px;
     }
 }
 
@@ -309,10 +308,17 @@
 
 @media screen and (max-width: 580px) {
     .intro_section {
-        padding: 0 0 100px;
+        padding: 0 0 120px;
     }
     .tabs_section {
-        padding: 10px 0;
+        padding: 0;
+    }
+    .tabs_box {
+        gap: 30px;
+        padding: 0 20px 20px;
+    }
+    .tabs_title {
+        font-size: 25px;
     }
 }
 
@@ -377,17 +383,17 @@
     .auto_chemical_img {
         border-radius: 44.34px 0px 0 32.34px;
     }
+    .intro_section {
+        padding: 0 0 75px;
+    }
 }
 
 @media screen and (max-width: 450px) {
     .button-category-active {
-        font-size: 10px;
+        font-size: 11px;
     }
     .button-category-none {
-        font-size: 10px;
-    }
-    .button-category-select {
-        font-size: 12px;
+        font-size: 11px;
     }
     .box_household_chemical_title {
         font-size: 28px;
