--- a/pages/AboutUs/css/style.css
+++ b/pages/AboutUs/css/style.css
@@ -597,7 +597,7 @@ main {
 
 .filligri_paragraph_1 {
     font-family: 'Inter', sans-serif;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 18px;
     line-height: 35px;
     color: #fff;
@@ -606,7 +606,7 @@ main {
 
 .filligri_paragraph_2 {
     font-family: 'Inter', sans-serif;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 18px;
     line-height: 35px;
     color: #fff;
@@ -664,7 +664,7 @@ main {
 .about_filligri-bg_title {
     text-align: left;
     font-family: 'Inter', sans-serif;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 24px;
     line-height: 40px;
     color: #fff;
@@ -696,34 +696,33 @@ main {
     padding: 10px;
 }
 
-.advantiges_title {
+.advantiges_box_line {
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.advantiges_title {
     font-family: 'Inter', sans-serif;
     font-weight: 700;
     font-size: 32px;
     line-height: 45px;
     color: #000;
     text-align: center;
+    z-index: 4;
+    background: #fff;
 }
 
-.advantiges_title:before {
+
+.advantiges_box_line:after {
     content: "";
     position: absolute;
     top: 50%;
-    left: -101%;
-    width: 100%;
+    width: 200%;
     height: 2px;
-    background: #74BEDE;
-}
-
-.advantiges_title:after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    right: -101%;
-    width: 100%;
-    height: 2px;
-    background: #74BEDE;
+    z-index: -2;
+    background: #74A9C1;
 }
 
 .advantiges_row {
@@ -942,5 +941,16 @@ main {
     right: 0;
     width: auto;
     height: 100%;
-    backdrop-filter: blur(5px);
+}
+
+.invite_inner:before {
+    content: "";
+    z-index: 2;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(6px);
 }
