--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,13 @@ body {
 
 .header_box_logo_inner {
     display: flex;
+    position: relative;
+}
+
+.absolute_link {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 .header_logo {
