--- a/pages/Contacts/css/style.css
+++ b/pages/Contacts/css/style.css
@@ -500,34 +500,46 @@ main {
     text-decoration: none;
 }
 
+/** сверху шаблон кода footer, header **/
 
-.about_filligri {
+.contacts_section {
     padding: 50px 0 20px;
 }
 
-.about_filligri_container {
-    max-width: 1250px;
+.contacts_container {
+    max-width: 1230px;
     margin: 0 auto;
 }
 
-.about_filligri_box {
+.contacts_box {
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    align-items: flex-start;
+    padding: 0 20px;
     gap: 25px;
 }
 
 .route_box {
     display: flex;
+    flex-direction: column;
+    gap: 35px;
+}
+
+.contacts_inner {
+    display: flex;
+}
+
+.route_inner {
+    display: flex;
+    flex-wrap: wrap;
     align-items: center;
     gap: 12px;
 }
 
-.about_filligri_info {
-    display: flex;
-    flex-direction: column;
-    gap: 35px;
-    padding: 0 20px;
+.route_inner > i {
+    padding: 4px 0;
+    font-size: 12px;
+    color: #74A9C1;
 }
 
 .marshrut_link {
@@ -539,426 +551,440 @@ main {
     text-decoration: none;
 }
 
-.route_box > i {
-    padding: 4px 0;
-    font-size: 12px;
-    color: #74A9C1;
-}
-
-.about_filligri_title {
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    font-size: 20px;
-    color: #000;
-}
-
-.about_filligri_title span {
-    font-size: 35px;
-    font-family: 'Inter', serif;
-}
-
-.about_filligri_row {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.filligri-img_col {
-    padding: 20px;
-}
-
-.filligri-descr_col {
-    padding: 20px;
-}
-
-.filligri-descr-image_box {
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-    height: 100%;
-}
-
-.filligri_description {
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 36px;
-    color: #121212;
-}
-
-.scientist_img {
-    width: 100%;
-    height: auto;
-    border-radius: 40px 40px 0px 40px;
-}
-
-.filligri-descr-box {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    padding: 30px;
-    background: linear-gradient(240.21deg, #88CAE6 5.17%, rgba(30, 144, 194, 0.67) 95.2%);
-    gap: 70px;
-    height: 100%;
-    border-radius: 40px 40px 40px 0px;
-}
-
-.filligri_paragraph_1 {
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 35px;
-    color: #fff;
-    z-index: 3;
-}
-
-.filligri_paragraph_2 {
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 35px;
-    color: #fff;
-    z-index: 3;
-}
-
-.about_filligri-bg_box {
-    display: flex;
-}
-
-.vector_1 {
-    position: absolute;
-    top: 18%;
-    left: 0;
-    z-index: 2;
-}
-
-.vector_2 {
-    position: absolute;
-    top: 50%;
-    right: 0;
-    z-index: 2;
-}
-
-.about_filligri-bg_row {
-    display: flex;
-    padding: 0 20px;
-}
-
-.about_filligri-bg_col {
-    width: 100%;
-    max-height: 235px;
-}
-
-.about_filligri-bg_box {
-    position: relative;
-    overflow: hidden;
-    display: flex;
-    background-image: url("../assets/image/2.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: right;
-    border-radius: 40px;
-    height: 100%;
-    padding: 10px;
-}
-
-.about_filligri-bg_inner {
-    display: flex;
-    align-items: flex-end;
-    padding: 60px 15px 40px;
-    z-index: 999;
-}
-
-.about_filligri-bg_title {
-    text-align: left;
+.contacts_title {
     font-family: 'Inter', sans-serif;
     font-weight: 500;
     font-size: 24px;
-    line-height: 40px;
+    line-height: 29.05px;
+    color: rgba(18, 18, 18, 1);
+}
+
+.socialmedia_box {
+    display: flex;
+    align-items: center;
+    gap: 14px;
+}
+
+.socialmedia_inner {
+    display: flex;
+    position: relative;
+}
+
+.absolute_link {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.socialmedia_inner i {
+    padding: 8px;
+    border-radius: 99em;
     color: #fff;
+    font-size: 15px;
+    background: rgba(202, 202, 202, 1);
 }
 
-.vector_3 {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    z-index: 2;
+.socialmedia_inner:hover i {
+    background: rgba(96, 174, 207, 1);
+    transition: 0.2s;
 }
 
-.advantiges_section {
-    padding: 60px 10px;
-    position: relative;
-    overflow: hidden;
-}
-
-.advantiges_container {
-    position: relative;
-    max-width: 1300px;
-    margin: 0 auto;
-}
-
-.advantiges_box {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-}
-
-.advantiges_box_line {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.advantiges_title {
-    font-family: 'Inter', sans-serif;
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 45px;
-    color: #000;
-    text-align: center;
-    z-index: 4;
-    background: #fff;
-    padding: 6px;
-}
-
-
-.advantiges_box_line:after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    width: 200%;
-    height: 2px;
-    z-index: -2;
-    background: rgba(116, 190, 222, 1);
-}
-
-.advantiges_row {
+.contacts_form_row {
     display: flex;
     flex-wrap: wrap;
-    padding-top: 70px;
-}
-
-.advantige_col {
-    padding: 50px;
-}
-
-.advangtige_box {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100%;
-    gap: 20px;
-    border-radius: 34.63px;
-    border: 3px solid rgba(116, 190, 222, 1);
-    border-bottom: 5px solid rgba(116, 190, 222, 1);
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    padding: 20px;
-}
-
-.advantige_img {
-    position: absolute;
-    top: -20%;
-    width: 80px;
-}
-
-.advangtige_name {
-    font-family: 'Inter', sans-serif;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 25px;
-    color: #60AECF;
-    padding-top: 35px;
-}
-
-.advangtige_descr {
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    font-size: 17px;
-    line-height: 35px;
-    text-align: center;
-}
-
-.benefits_section {
-    padding: 0 20px 20px;
-}
-
-.benefits_container_first {
-    max-width: 1250px;
-    margin: 0 auto;
-}
-
-.benefits_first_row {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.benefits-first_col {
-    padding: 20px;
-}
-
-.benefits-first_box {
-    display: flex;
-    padding: 20px;
-    height: 100%;
-}
-
-.first-benef_img {
     width: 100%;
-    height: auto;
-    border-radius: 40px;
 }
 
-.benefits-first-info_box {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-}
-
-.benefit_text {
-    position: relative;
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 35px;
-    color: #000;
-}
-
-.benefit_text:before {
-    content: "";
-    position: absolute;
-    bottom: -25px;
-    left: 0;
-    width: 46%;
-    height: 2px;
-    background: rgba(116, 190, 222, 1);
-}
-
-.benefits_container_second {
-    max-width: 1000px;
-    margin: 0 auto;
-}
-
-.benefits_second_row {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.benefits-second_col {
-    padding: 20px;
-}
-
-.benefits-second_box {
-    display: flex;
-    height: 100%;
-}
-
-.selected-benefit-second_box {
-    justify-content: flex-end;
-}
-
-.benefit_text_2 {
-    position: relative;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 35px;
-    color: #000;
-}
-
-.benefit_text_2:before {
-    content: "";
-    position: absolute;
-    bottom: -25px;
-    left: 0;
-    width: 42%;
-    height: 2px;
-    background: rgba(116, 190, 222, 1);
-}
-
-.filligri_png {
-    width: 40%;
-    height: auto;
-}
-
-.invite_section {
-    padding: 20px 20px 100px;
-}
-
-.invite_container {
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-.invite_box {
-    position: relative;
-    overflow: hidden;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    background-image: url("../assets/image/4.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    min-height: 300px;
-    padding: 50px 70px 0;
-    border-radius: 40px;
-}
-
-.invite_inner {
+.form_box {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 15px;
-    max-width: 510px;
+    gap: 20px;
     height: 100%;
-    z-index: 4;
 }
 
-.invite_text {
+.input_box {
+    display: flex;
+    align-items: center;
+    border-radius: 40px;
+    width: 100%;
+    background: rgba(245, 245, 245, 1);
+    padding: 5px 20px;
+}
+
+.name_input::placeholder {
+    color: rgba(202, 202, 202, 1);
+}
+
+.name_input {
+    outline: none;
+    border: none;
+    padding: 10px;
     font-family: 'Inter', sans-serif;
-    font-weight: 500;
+    font-weight: 400;
+    background: none;
+    flex-grow: 1;
     font-size: 16px;
-    line-height: 35px;
-    color: #fff;
-    z-index: 3;
+    line-height: 19.36px;
+    color: rgba(18, 18, 18, 1);
 }
 
-.invite_button {
-    align-self: flex-end;
-    z-index: 3;
+.check_input_img {
+    opacity: 0;
+    transition: 0.2s;
+}
+
+.check_input_img.Active {
+    opacity: 1;
+    transition: 0.2s;
+}
+
+.email_input::placeholder {
+    color: rgba(202, 202, 202, 1);
+}
+
+.email_input {
+    outline: none;
+    border: none;
+    padding: 10px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    background: none;
+    flex-grow: 1;
+    font-size: 16px;
+    line-height: 19.36px;
+    color: rgba(18, 18, 18, 1);
+}
+
+.message_textarea::placeholder {
+    color: rgba(202, 202, 202, 1);
+}
+.message_textarea {
+    resize: none;
+    width: 100%;
+    height: 100%;
+    outline: none;
+    border: none;
+    background: rgba(245, 245, 245, 1);
+    border-radius: 40px;
+    padding: 25px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: rgba(18, 18, 18, 1);
+}
+
+.submit_button.Active {
+    background: rgba(96, 174, 207, 1);
+    transition: 0.2s;
+}
+.submit_button {
+    margin-top: 30px;
+    padding: 14px 25px;
     font-family: 'Inter', sans-serif;
     font-weight: 500;
-    font-size: 17px;
-    line-height: 35px;
-    border-radius: 36px;
-    padding: 8px 20px;
-    background: rgba(116, 190, 222, 1);
+    font-size: 15px;
+    line-height: 18.15px;
+    background: rgba(202, 202, 202, 1);
     border: none;
     color: #fff;
+    border-radius: 40px;
+    align-self: flex-end;
     cursor: pointer;
 }
 
-.vector_4 {
-    z-index: 2;
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: auto;
+.info_box {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
     height: 100%;
 }
 
-.invite_inner:before {
-    content: "";
-    z-index: 2;
+.work-time_box {
+    display: flex;
+    gap: 20px;
+    width: 40%;
+}
+
+.work-time_box i {
+    font-size: 30px;
+    color: rgba(96, 174, 207, 1);
+}
+
+.work-time_inner {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+.work-time_title {
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24.2px;
+    color: #000;
+}
+
+.work-time_inner_box {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.work-time_daily {
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 25px;
+    color: rgba(131, 131, 131, 1);
+}
+
+.work-time_value {
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 25px;
+    color: rgba(131, 131, 131, 1);
+}
+
+.number-of-phone_box {
+    display: flex;
+    gap: 20px;
+    width: 40%;
+}
+
+.number-of-phone_box i {
+    font-size: 30px;
+    color: rgba(96, 174, 207, 1);
+}
+
+.number-of-phone_inner {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+.number-of-phone_title {
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24.2px;
+    color: #000;
+}
+
+.number-of-phone_inner_box {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.number-of-phone_box_value {
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 25px;
+    color: rgba(131, 131, 131, 1);
+    text-decoration: none;
+}
+
+.number-of-phone_box_value:hover {
+    color: rgba(96, 174, 207, 1);
+    transition: 0.2s;
+}
+
+.mail_box {
+    display: flex;
+    gap: 20px;
+    width: 40%;
+}
+
+.mail_box i {
+    font-size: 30px;
+    color: rgba(96, 174, 207, 1);
+}
+
+.mail_box_inner {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+.mail_box_title {
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24.2px;
+    color: #000;
+}
+
+.mail_box_inner_box {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.mail_box_value {
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 25px;
+    color: rgba(131, 131, 131, 1);
+    text-decoration: none;
+}
+
+.mail_box_value:hover {
+    color: rgba(96, 174, 207, 1);
+    transition: 0.2s;
+}
+
+.map_section {
+    padding-top: 60px;
+}
+
+.map_box {
+    position: relative;
+    overflow: hidden;
+}
+
+.map_frame {
+    display: block;
+    z-index: 1;
+}
+
+.map_open_btn {
+    display: none;
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    backdrop-filter: blur(6px);
+    top: 50%;
+    left: 1%;
+    border: none;
+    background: none;
+    font-size: 25px;
+    color: #fff;
+    width: 40px;
+    height: 40px;
+    border-radius: 99em;
+    background: rgba(96, 174, 207, 1);
+}
+
+.map_inner {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    top: 20%;
+    right: 10%;
+    z-index: 3;
+    width: 300px;
+    height: auto;
+    gap: 50px;
+    background: #fff;
+    border-radius: 40px;
+    padding: 40px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.office_box {
+    display: flex;
+    gap: 10px;
+    cursor: pointer;
+}
+
+.office_point {
+    font-size: 25px;
+    color: rgba(131, 131, 131, 1);
+    transition: 0.2s;
+}
+
+.office_point.Active {
+    color: rgba(96, 174, 207, 1);
+    transition: 0.2s;
+}
+
+.office_inner {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.office_title {
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    color: rgba(131, 131, 131, 1);
+    transition: 0.2s;
+}
+
+.office_title.Active {
+    color: rgba(96, 174, 207, 1);
+    transition: 0.2s;
+}
+
+.office_adress {
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 18px;
+    color: rgba(131, 131, 131, 1);
+    transition: 0.2s;
+}
+
+.office_adress.Active {
+    color: rgba(18, 18, 18, 1);
+    transition: 0.2s;
+}
+
+.develop_box {
+    display: flex;
+    gap: 10px;
+    cursor: pointer;
+}
+
+.develop_point {
+    font-size: 25px;
+    color: rgba(131, 131, 131, 1);
+    transition: 0.2s;
+}
+
+.develop_point.Active {
+    color: rgba(96, 174, 207, 1);
+    transition: 0.2s;
+}
+
+.develop_inner {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.develop_title {
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    color: rgba(131, 131, 131, 1);
+    transition: 0.2s;
+}
+
+.develop_title.Active {
+    color: rgba(96, 174, 207, 1);
+    transition: 0.2s;
+}
+
+.develop_adress {
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 18px;
+    color: rgba(131, 131, 131, 1);
+    transition: 0.2s;
+}
+
+.develop_adress.Active {
+    color: rgba(18, 18, 18, 1);
+    transition: 0.2s;
 }
